Fix width and alignment of staff initial field

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -717,6 +717,10 @@ div.panel-pane div.node.boxed {
 
       .form-item {
         width: 100%;
+
+        input {
+          width: auto;
+        }
       }
     }
   }
